--- a/recommendations.html
+++ b/recommendations.html
@@ -32,15 +32,34 @@
     </div>
   </header>
 
+  <div id="mobileMenu" class="hidden fixed inset-0 bg-gray-800 bg-opacity-50 backdrop-blur-sm transition-opacity">
+    <div class="bg-white w-full max-w-sm ml-auto h-full shadow-lg transform transition-transform">
+      <div class="p-6">
+        <div class="flex justify-end">
+          <button id="closeMenu" class="text-gray-500 hover:text-gray-700">
+            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <nav class="mt-8 space-y-4">
+          <a href="index.html" class="block text-lg text-gray-700 hover:text-cyan-600">Home</a>
+          <a href="recommendations.html" class="block text-lg text-gray-700 hover:text-cyan-600">Recommendations</a>
+          <a href="about.html" class="block text-lg text-gray-700 hover:text-cyan-600">About Me</a>
+        </nav>
+      </div>
+    </div>
+  </div>
+
   <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
-    <h1 class="text-4xl font-bold text-gray-900 mb-8">My Recommended Products</h1>
-    <p class="text-gray-600 mb-12">These are the products I’ve personally vetted to support your journey. By purchasing through my links, you directly support my mission and empower yourself with better health.</p>
+    <h1 class="text-4xl font-bold text-gray-900 mb-8 text-center">My Recommended Products</h1>
+    <p class="text-gray-600 mb-12 text-center">These are the products I've personally vetted to support your journey. By purchasing through my links, you directly support my mission and empower yourself with better health.</p>
 
     <!-- Gut Health Triad -->
-    <section class="mb-16">
+    <section id="gut-health-triad" class="mb-16 text-center">
       <h2 class="text-3xl font-bold text-gray-900 mb-6">Gut Health Triad</h2>
-      <div class="bg-gray-100 p-4 rounded-lg">
-        <img src="images/GutHealthTriad.png" alt="Gut Health Triad" class="max-w-full h-auto rounded-lg">
+      <div class="bg-gray-100 p-4 rounded-lg inline-block">
+        <img src="images/GutHealthTriad.png" alt="Gut Health Triad" class="max-w-full h-auto rounded-lg max-h-[400px] object-contain">
       </div>
       <p class="text-gray-600 mb-6">
         The Gut Health Triad is a powerful combination of nutrients (e.g., probiotics, prebiotics, enzymes—replace this with actual details) designed to restore balance to your digestive system. A healthy gut can improve energy, mood, immune function, and overall vitality.
@@ -50,16 +69,16 @@
         <li>Supports immune system health</li>
         <li>May enhance mood and energy levels</li>
       </ul>
-      <a href="#" class="inline-block bg-cyan-600 text-white px-8 py-3 rounded-lg hover:bg-cyan-700 font-medium shadow-lg">
+      <a href="https://nucleogenex.com/details/173/DickeyL" class="inline-block bg-cyan-600 text-white px-8 py-3 rounded-lg hover:bg-cyan-700 font-medium shadow-lg" target="_blank">
         Buy Now (Affiliate Link)
       </a>
     </section>
 
     <!-- Clarity Perfect Water System -->
-    <section class="mb-16">
+    <section id="clarity-water" class="mb-16 text-center">
       <h2 class="text-3xl font-bold text-gray-900 mb-6">Clarity Perfect Water System</h2>
-      <div class="bg-gray-100 p-4 rounded-lg">
-        <img src="images/ClarityPerfectWaterSystem.png" alt="Clarity Perfect Water System" class="max-w-full h-auto rounded-lg">
+      <div class="bg-gray-100 p-4 rounded-lg inline-block">
+        <img src="images/ClarityPerfectWaterSystem.png" alt="Clarity Perfect Water System" class="max-w-full h-auto rounded-lg max-h-[400px] object-contain">
       </div>
       <p class="text-gray-600 mb-6">
         The Clarity Perfect Water System provides water as pure as reverse osmosis systems at a fraction of the cost. It reintroduces six essential negatively charged minerals, boosts alkalinity (up to pH 9), infuses hydrogen for antioxidant benefits, and achieves an impressive ORP of -700mV.
@@ -70,7 +89,7 @@
         <li>Hydrogen infusion for antioxidant power</li>
         <li>Option to earn free by referring 5 people</li>
       </ul>
-      <a href="#" class="inline-block bg-cyan-600 text-white px-8 py-3 rounded-lg hover:bg-cyan-700 font-medium shadow-lg">
+      <a href="https://clarityperfect.com/8274/" class="inline-block bg-cyan-600 text-white px-8 py-3 rounded-lg hover:bg-cyan-700 font-medium shadow-lg" target="_blank">
         Get the Clarity Water System (Affiliate Link)
       </a>
     </section>
@@ -84,6 +103,20 @@
   </footer>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    const mobileMenuButton = document.querySelector('[aria-label="Open Menu"]');
+    const mobileMenu = document.getElementById('mobileMenu');
+    const closeMenu = document.getElementById('closeMenu');
+
+    mobileMenuButton.addEventListener('click', () => {
+      mobileMenu.classList.remove('hidden');
+      document.body.style.overflow = 'hidden';
+    });
+
+    closeMenu.addEventListener('click', () => {
+      mobileMenu.classList.add('hidden');
+      document.body.style.overflow = '';
+    });
   </script>
 </body>
 </html>
