--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Learn about Logen’s personal health journey and transformation story." />
+  <meta name="description" content="Learn about Logen's personal health journey and transformation story." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Logen’s Wellness Journey | About Me</title>
+  <title>Logen's Wellness Journey | About Me</title>
   <link rel="icon" href="favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,21 +18,44 @@
   <!-- Header -->
   <header class="bg-white shadow-sm">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-      <a href="index.html" class="text-2xl font-bold text-cyan-600">Logen’s Wellness Journey</a>
+      <a href="index.html" class="text-2xl font-bold text-cyan-600">Logen's Wellness Journey</a>
       <nav class="hidden md:flex space-x-8">
         <a href="index.html" class="text-gray-700 hover:text-cyan-600">Home</a>
         <a href="recommendations.html" class="text-gray-700 hover:text-cyan-600">Recommendations</a>
         <a href="about.html" class="text-gray-700 hover:text-cyan-600 font-bold">About Me</a>
       </nav>
-      <button class="md:hidden text-gray-500 hover:text-gray-700" aria-label="Open Menu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
+      <button id="openMenu" class="md:hidden relative w-10 h-10 bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-lg shadow-lg overflow-hidden group">
+        <div class="absolute inset-0 w-full h-full flex flex-col items-center justify-center space-y-1.5 transition-transform duration-300 group-hover:scale-110">
+          <div class="w-5 h-0.5 bg-white rounded-full transition-transform duration-300"></div>
+          <div class="w-5 h-0.5 bg-white rounded-full transition-transform duration-300"></div>
+          <div class="w-5 h-0.5 bg-white rounded-full transition-transform duration-300"></div>
+        </div>
       </button>
     </div>
   </header>
 
-  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="fixed inset-0 bg-gray-800 bg-opacity-50 backdrop-blur-sm z-50 hidden transition-opacity duration-300 opacity-0">
+    <div class="bg-gradient-to-br from-cyan-600 to-cyan-800 w-64 h-full ml-auto transform transition-transform duration-300 translate-x-full">
+      <div class="p-6">
+        <div class="flex justify-end mb-8">
+          <button id="closeMenu" class="text-white hover:text-cyan-200 transition-colors duration-300">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <nav class="space-y-6">
+          <a href="index.html" class="block text-lg text-white hover:text-cyan-200 transition-colors duration-300">Home</a>
+          <a href="recommendations.html" class="block text-lg text-white hover:text-cyan-200 transition-colors duration-300">Recommendations</a>
+          <a href="about.html" class="block text-lg text-cyan-200 font-bold transition-colors duration-300">About Me</a>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
     <h1 class="text-4xl font-bold text-gray-900 mb-8">About Me</h1>
     <div class="grid md:grid-cols-2 gap-12 mb-12">
       <div>
@@ -43,7 +66,7 @@
           By making simple but impactful changes—like incorporating the Gut Health Triad into my daily routine and investing in the Clarity Perfect Water System—I began noticing improvements in my digestion, mood, and overall vitality. My skin cleared up, my energy soared, and I finally felt like I was thriving.
         </p>
         <p class="text-gray-600 mb-6">
-          Now, I’m dedicated to sharing these findings with others. My mission is to help as many people as possible experience what I have: genuine, lasting health transformations. By supporting the products on my website, you’re not only investing in your own well-being but also helping me continue spreading the word and reaching more people.
+          Now, I'm dedicated to sharing these findings with others. My mission is to help as many people as possible experience what I have: genuine, lasting health transformations. By supporting the products on my website, you're not only investing in your own well-being but also helping me continue spreading the word and reaching more people.
         </p>
       </div>
       <div class="flex items-center justify-center">
@@ -61,11 +84,11 @@
   <!-- Footer -->
   <footer class="bg-white border-t border-gray-200 py-8">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-600">
-      &copy; <span id="year"></span> Logen’s Wellness Journey. All rights reserved.
+      &copy; <span id="year"></span> Logen's Wellness Journey. All rights reserved.
     </div>
   </footer>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+
+  <!-- Single script tag -->
+  <script src="scripts.js"></script>
 </body>
 </html>
