HUGE overhaul to about page. it looks much better, added sections and a call to action at bottom

--- a/about.html
+++ b/about.html
@@ -55,30 +55,219 @@
   </div>
 
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
-    <h1 class="text-4xl font-bold text-gray-900 mb-8">About Me</h1>
-    <div class="grid md:grid-cols-2 gap-12 mb-12">
-      <div>
-        <p class="text-gray-600 mb-6">
-          My name is Logen Dickey, and for most of my life, I struggled with maintaining consistent health and energy levels. I tried countless supplements, diets, and routines, but nothing stuck until I discovered the power of focusing on my gut health and proper hydration.
-        </p>
-        <p class="text-gray-600 mb-6">
-          By making simple but impactful changes—like incorporating the Gut Health Triad into my daily routine and investing in the Clarity Perfect Water System—I began noticing improvements in my digestion, mood, and overall vitality. My skin cleared up, my energy soared, and I finally felt like I was thriving.
-        </p>
-        <p class="text-gray-600 mb-6">
-          Now, I'm dedicated to sharing these findings with others. My mission is to help as many people as possible experience what I have: genuine, lasting health transformations. By supporting the products on my website, you're not only investing in your own well-being but also helping me continue spreading the word and reaching more people.
-        </p>
-      </div>
-      <div class="flex items-center justify-center">
-        <div class="space-y-6">
-          <img src="https://via.placeholder.com/400x300" alt="Before Photo" class="rounded-lg shadow-lg">
-          <img src="https://via.placeholder.com/400x300" alt="After Photo" class="rounded-lg shadow-lg">
-        </div>
-      </div>
+  <main class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
+    <!-- Hero Section -->
+    <div class="text-center mb-16">
+      <h1 class="text-5xl font-bold text-gray-900 mb-6">My Wellness Journey</h1>
+      <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+        From struggling with energy and focus to discovering the transformative power of gut health and proper hydration.
+      </p>
     </div>
-    <p class="text-gray-600">
-      Thank you for joining me on this journey. I believe that with the right information and tools, we can all achieve better health and improve the quality of our lives—and the lives of those we love.
-    </p>
+
+    <!-- Journey Timeline -->
+    <div class="space-y-24 mb-24">
+      <!-- Early Struggles Section -->
+      <section class="grid md:grid-cols-2 gap-12 items-center">
+        <div class="space-y-6">
+          <h2 class="text-3xl font-bold text-gray-900">The Beginning</h2>
+          <p class="text-gray-600">
+            My name is Logen Dickey, and when covid hit I gained over 60 pounds, lost a lot of my muscle, and struggled with energy levels and mental 
+            motivation. I had the frustrating cycle of high and low energy that went on for days, weeks, and months. This is also how I felt mentally. 
+            I never quite knew if I could stay consistent with anything and take back control of my life.
+            I would be super productive for a few weeks, then I would fall off my high horse and be back to my old habits for a few months.
+            It was a terrible cycle that I couldn't break. I tried countless supplements and diets, but nothing seemed to provide the lasting 
+            change I was looking for. 
+          </p>
+          <div class="border-l-4 border-cyan-600 pl-6 italic text-gray-700">
+            "From my first keto diet back in early 2022 to intermittent fasting, consistent exercise, 
+            and hard diet changes, I just couldn't keep my physical or mental motivation up."
+          </div>
+        </div>
+        <div class="relative">
+          <img src="images/BeforeLifeChange (1).jpg" alt="Early Journey" class="rounded-lg shadow-xl">
+          <div class="absolute -bottom-4 -left-4 bg-cyan-600 text-white px-6 py-2 rounded-lg">
+            Before
+          </div>
+        </div>
+      </section>
+
+      <!-- Discovery Section -->
+      <section class="grid md:grid-cols-2 gap-12 items-center md:grid-flow-dense">
+        <div class="space-y-6 md:col-start-2">
+          <h2 class="text-3xl font-bold text-gray-900">The Discovery</h2>
+          <p class="text-gray-600">
+            Everything changed when I realized the crucial connection that my energy and mental levels were directly related 
+            to my gut health and hydration. It took a lot of trial and error, but I finally found a way to stay consistent with my health.
+            For the first time in my life really, I was able to stay consistent on everything from my diet, to my exercise, to my supplements.
+            My energy levels were rising, but not just one day or one week, it was every single day. My poor gut health was causing my mental 
+            state to be all over the place. Once I realized this, I knew it was time to make a change. 
+          </p>
+          <ul class="space-y-3 text-gray-600">
+            <li class="flex items-center">
+              <svg class="w-5 h-5 text-cyan-600 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
+              </svg>
+              Improved mental clarity and focus
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 text-cyan-600 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
+              </svg>
+              Consistent energy throughout the day
+            </li>
+            <li class="flex items-center">
+              <svg class="w-5 h-5 text-cyan-600 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
+              </svg>
+              Enhanced workout performance
+            </li>
+          </ul>
+        </div>
+        <div class="relative md:col-start-1">
+          <img src="images/TurningPoint.jpg" alt="The Discovery" class="rounded-lg shadow-xl">
+          <div class="absolute -bottom-4 -right-4 bg-gradient-to-r from-cyan-600 to-cyan-700 text-white px-6 py-2 rounded-lg">
+            The Turning Point
+          </div>
+        </div>
+      </section>
+
+      <!-- Present Day Section -->
+      <section class="grid md:grid-cols-2 gap-12 items-center">
+        <div class="space-y-6">
+          <h2 class="text-3xl font-bold text-gray-900">Today</h2>
+          <p class="text-gray-600">
+            Now, I'm experiencing levels of energy and mental clarity that I haven't felt since my youth. 
+            Through proper gut health and hydration, I've unlocked a new chapter in my wellness journey. 
+            Of course, my mental state and clarity has been amazing as well. The best part? I'm only just getting started! 
+            This feeling is something I want to share with the world. 
+
+          </p>
+          <div class="bg-gradient-to-r from-cyan-50 to-white p-6 rounded-lg border border-cyan-100">
+            <h3 class="text-xl font-semibold text-gray-900 mb-3">My Daily Routine</h3>
+            <ul class="space-y-2 text-gray-600">
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Gut Health Triad supplementation first thing in the morning
+              </li>
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Cold therapy in the morning
+              </li>
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Proper hydration with Clarity Perfect Water all day
+              </li>
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Balanced nutrition meals, not eating too late
+              </li>
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Excercise in the morning or eveneing (at least 3 times a week)
+              </li>
+              <li class="flex items-start">
+                <span class="text-cyan-600 mr-2">→</span>
+                Get good quality sleep!
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="relative">
+          <img src="images/Now.jpg" alt="Present Day" class="rounded-lg shadow-xl">
+          <div class="absolute -bottom-4 -left-4 bg-cyan-600 text-white px-6 py-2 rounded-lg">
+            Now
+          </div>
+        </div>
+      </section>
+
+      <!-- Journey Length Explanation -->
+      <section class="mb-16 text-center">
+        <div class="max-w-3xl mx-auto bg-gradient-to-r from-cyan-50 to-white p-8 rounded-2xl shadow-md">
+          <h2 class="text-3xl font-bold text-gray-900 mb-6">Why <div class="text-cyan-600 inline" id="daysCounter">Calculating...</div> Days?</h2>
+          <p class="text-gray-600 text-lg leading-relaxed">
+            This number represents more than just days—it's the entire length of my wellness journey. 
+            For years, I've been trying to take control back of my life, experimenting with different approaches 
+            and facing countless ups and downs. While I've only recently discovered what truly works for me, 
+            every step of this journey—including the struggles—has been crucial in leading me to where I am today.
+          </p>
+          <div class="mt-6 border-l-4 border-cyan-600 pl-6 text-left">
+            <p class="italic text-gray-700">
+              "The journey of a thousand miles begins with a single step, but it's finding the right path that makes all the difference."
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Future Goals Introduction -->
+      <section class="mb-12 text-center">
+        <h2 class="text-4xl font-bold text-gray-900 mb-6">Looking Forward</h2>
+        <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-12">
+          Now that I've found what works, my mission is to help others avoid the years of trial and error 
+          I went through. Here's how I plan to make a difference:
+        </p>
+      </section>
+
+      <!-- Achievement Cards Section (your existing section with the 3 cards) -->
+      <section class="mb-24 bg-gradient-to-br from-white to-cyan-50 rounded-2xl p-8 md:p-12 shadow-lg">
+        <div class="grid md:grid-cols-3 gap-8">
+          <!-- Key Achievement 1 -->
+          <div class="text-center p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300">
+            <div class="w-16 h-16 mx-auto mb-4 bg-cyan-100 rounded-full flex items-center justify-center">
+              <svg class="w-8 h-8 text-cyan-600" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"/>
+              </svg>
+            </div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Community Impact</h3>
+            <p class="text-gray-600">
+              Helping others discover their path to wellness through proper gut health and hydration.
+            </p>
+          </div>
+
+          <!-- Key Achievement 2 -->
+          <div class="text-center p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300">
+            <div class="w-16 h-16 mx-auto mb-4 bg-cyan-100 rounded-full flex items-center justify-center">
+              <svg class="w-8 h-8 text-cyan-600" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"/>
+                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"/>
+              </svg>
+            </div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Personal Growth</h3>
+            <p class="text-gray-600">
+              From struggling with consistency to maintaining peak performance daily.
+            </p>
+          </div>
+
+          <!-- Key Achievement 3 -->
+          <div class="text-center p-6 bg-white rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300">
+            <div class="w-16 h-16 mx-auto mb-4 bg-cyan-100 rounded-full flex items-center justify-center">
+              <svg class="w-8 h-8 text-cyan-600" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z"/>
+              </svg>
+            </div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2">Knowledge Sharing</h3>
+            <p class="text-gray-600">
+              Documenting and sharing insights to help others on their wellness journey.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Call to Action -->
+    <section class="bg-gradient-to-r from-cyan-600 to-cyan-700 rounded-2xl p-8 md:p-12 text-white text-center">
+      <h2 class="text-3xl font-bold mb-4">Ready to Start Your Journey?</h2>
+      <p class="text-cyan-100 mb-8 max-w-2xl mx-auto">
+        Join me in discovering how proper gut health and hydration can transform your life. Let me share the tools and knowledge that helped me reclaim my vitality.
+      </p>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <a href="recommendations.html" class="inline-flex items-center justify-center px-6 py-3 bg-white text-cyan-600 font-semibold rounded-lg hover:bg-cyan-50 transition-colors duration-300">
+          View My Recommendations
+          <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+          </svg>
+        </a>
+      </div>
+    </section>
   </main>
 
   <!-- Footer -->
