--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
         <p class="text-gray-600 mb-6">
           Check out my progress photos and discover how focusing on gut health and high-quality hydration changed my life.
         </p>
+        <p class="text-gray-600 mb-6">
+          Wondering why there are so many days on my journey? Learn why I haven't always been consistent. 
+        </p>
         <a href="about.html" class="inline-block bg-cyan-600 text-white px-8 py-3 rounded-lg hover:bg-cyan-700 font-medium shadow-lg">
           Read More About Me
         </a>
@@ -224,7 +227,8 @@
   <section class="bg-gradient-to-br from-cyan-50 to-white py-16">
     <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="text-3xl font-bold text-gray-900 mb-4">Join the Wellness Warriors Community</h2>
-      <p class="text-gray-600 mb-8">Get exclusive weekly insights, transformation tips, and early access to new recommendations. Join our community of health-conscious warriors!</p>
+      <p class="text-gray-600 mb-8">Get exclusive weekly insights, transformation tips, and early access to new recommendations. 
+        Join our community of health-conscious warriors!</p>
       
       <!-- Success/Error Messages -->
       <div id="error-message" class="hidden mb-4 p-4 text-red-700 bg-red-100 border-l-4 border-red-500 rounded-lg shadow-md transition-all duration-300">
